Fixed Image Spacing

--- a/frontend/src/css/ImageGroup.css
+++ b/frontend/src/css/ImageGroup.css
@@ -5,3 +5,8 @@ padding: 0;}
 .group-images{
    max-width: 50%;
 }
+
+img{
+vertical-align:bottom;
+
+}
